# smarter-kettle-client

./: .gitignore  .pylintrc  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml
discovery/: __main__.py
smarter_client/: dict_util.py  version.py
smarter_client/domain/: __init__.py  identity_toolkit_client.py  models.py  smarter_client.py
smarter_client/managed_devices/: __init__.py  base.py  coffee_v2.py  kettle_v3.py
smarter_kettle_client/: __init__.py  dict_util.py  identity_toolkit_client.py  models.py  smarter_client.py  version.py
smarter_kettle_client/domain/: identity_toolkit_client.py  models.py  smarter_client.py
smarter_kettle_client/managed_devices/: __init__.py  base.py  kettle_v3.py
smarter_kettle_client/model/: __init__.py  base_entity.py  command.py  device.py  login_session.py  network.py  settings.py  status.py  user.py
tests/: dict_util_test.py
tests/domain/: models_test.py
tests/domain/decoorators/: session_test.py
