[project]
name = "Smarter Kettle client library"
version = "0.1.0"
description = "Firebase Admin Python SDK"
authors = [
    { name = "Kirill Birger", email = "kbirger@gmail.com" },
    { name = "@kbirger" },
]
dependencies = [
    "astroid==2.3.3",
    "pylint==2.3.1",
    "pytest>=6.2.0",
    "pytest-cov>=2.4.0",
    "pytest-localserver>=0.4.1",
    "pytest-asyncio>=0.16.0",
    "pytest-mock>=3.6.1",
    "aiohttp>=3.9.3",
    "pyrebase4==4.7.1",
    "setuptools>=69.2.0",
]
requires-python = ">=3.12.2"
readme = "README.md"
license = { text = "MIT" }
keywords = ["smarter kettle python"]
classifiers = [
    "License :: MIT",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]


[project.urls]
Homepage = "https://www.github.com/kbirger/smarter-kettle-client"
"Release Notes" = "https://www.github.com/kbirger/smarter-kettle-client"
Source = "https://www.github.com/kbirger/smarter-kettle-client"
[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
